xmlclassguard混淆后，同步更改顶级类/方法/变量的引用

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
             name="user"
             type="com.ljx.base.User" />
 
-        <import type="com.ljx.example.test.Book" />
+        <import type="com.ljx.example.entity.Book" />
 
     </data>
 
